@@ -2,6 +2,8 @@
 v6.2.0-git
 ----------
 
+[mms] Enable configuration of IMAP cache lifetime for Horde_Cache and
+      Hashtable backends.
 [mms] Only refresh quota information when switching to a mailbox the first
       time.
 [mms] More efficiently store mailbox cache information in the session.
